[package]
name = "portfolio-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.4" }
axum-server = { version = "0.7.2", features = ["tls-rustls"] }
chrono = "0.4.41"
futures = "0.3.31"
markdown = "1.0.0"
matter = "0.1.0-alpha4"
maud = { version = "0.27.0", features = ["axum"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
serde_qs = { version = "0.15.0", features = ["axum"] }
serde_yml = "0.0.12"
tokio = { version = "1.46.1", features = ["rt-multi-thread"] }
tower-http = { version = "0.6.6", features = ["fs"] }
